--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -71,6 +71,9 @@
   gap: 6px;
   align-items: center;
 }
+.icons .account p {
+  font-size: 17px;
+}
 .header {
   padding: 20px 30px;
   display: flex;
