--- a/src/components/home.css
+++ b/src/components/home.css
@@ -126,4 +126,58 @@
   filter: blur(0.5px);
   cursor: pointer;
 }
-/*product ****** */
+
+/* *****banner */
+.banner {
+  width: 100%;
+  padding: 20px 30px;
+}
+.banner-container {
+  padding: 30px 80px;
+  border-radius: 10px;
+  background-color: rgb(0, 195, 255);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.banner-details {
+  margin-left: 30px;
+}
+.banner-details h4 {
+  color: #e3edf6;
+  font-size: 25px;
+}
+.banner-details h3 {
+  font-size: 50px;
+  margin-top: 20px;
+  margin-right: 20%;
+  letter-spacing: 3px;
+  color: #fff;
+}
+.banner-details p {
+  color: #fff;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-top: 10px;
+}
+.btn-1 {
+  text-decoration: none;
+  font-size: 15px;
+  padding: 15px 31px;
+  color: #fff;
+  transition: 0.5s;
+  background-color: #000;
+  margin-top: 20px;
+  position: relative;
+  top: 52px;
+  border-radius: 10px;
+}
+
+.btn-1:hover {
+  background-color: #fff;
+  color: #000;
+  border-radius: 5px;
+}
+/*footer ****** */
