--- a/src/components/home.css
+++ b/src/components/home.css
@@ -126,6 +126,69 @@
   filter: blur(0.5px);
   cursor: pointer;
 }
+/* Home products */
+.product {
+  padding: 20px 40px;
+  width: 100%;
+}
+.product-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 60px;
+  padding: 30px 57px;
+  border-bottom: 1px solid #e2e0e0;
+}
+.product-container .box {
+  padding: 20px 30px;
+  width: 330px;
+  height: 380px;
+  border: 1px solid #e2e0e0;
+  border-radius: 14px;
+  transition: 0.5s;
+}
+.product-container .box:hover {
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+  cursor: pointer;
+}
+.product h2 {
+  color: #010f1c;
+  font-size: 40px;
+  margin: 30px 60px;
+}
+.img-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5px;
+  margin: 8px 0;
+}
+.img-box img {
+  width: 50%;
+}
+.detail {
+  border-top: 1px solid #e2e0e0;
+  margin: 10px 0;
+}
+.product-icons {
+  position: absolute;
+  margin-left: 250px;
+  overflow: hidden;
+  z-index: 1;
+}
+.product-icons li:hover {
+  background-color: #098fff;
+  color: #fff;
+}
+.product-icons li {
+  padding: 11px 17px;
+  color: #010f1c;
+  background-color: #fff;
+  box-shadow: rgb(0, 0, 0, 0.35) 0px 1px 4px;
+  border: 1px solid #9a9a9a;
+  font-size: 18px;
+}
 
 /* *****banner */
 .banner {
