--- a/src/components/home.css
+++ b/src/components/home.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
 /*  Navbar**************/
 .top-banner {
   max-width: 100%;
@@ -33,6 +34,10 @@
   color: black;
   transition: 0.5s;
   background-color: #fff;
+  display: flex;
+  align-items: center;
+  width: 16%;
+  gap: 9px;
 }
 
 .btn:hover {
@@ -151,11 +156,6 @@
   box-shadow: rgba(0, 0, 0, 0.5) 1px 3px 10px;
   cursor: pointer;
 }
-.product h2 {
-  color: #010f1c;
-  font-size: 40px;
-  margin: 30px 60px;
-}
 .img-box {
   display: flex;
   align-items: center;
@@ -199,7 +199,6 @@
 .product-icons {
   position: relative;
   right: 0;
-  display: hidden;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -230,17 +229,19 @@
 .banner-container {
   padding: 30px 80px;
   border-radius: 10px;
-  background-color: rgb(0, 195, 255);
+  background-color: rgb(29 93 187 / 56%);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .banner-details {
   margin-left: 30px;
+  cursor: pointer;
 }
 .banner-details h4 {
   color: #e3edf6;
   font-size: 25px;
+  font-weight: 900;
 }
 .banner-details h3 {
   font-size: 50px;
@@ -249,12 +250,13 @@
   letter-spacing: 3px;
   color: #fff;
 }
+
 .banner-details p {
   color: #fff;
-  font-size: 25px;
+  font-size: 22px;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 1px;
   margin-top: 10px;
 }
 .image-box-banner img {
@@ -275,6 +277,10 @@
   position: relative;
   top: 52px;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  width: 19%;
 }
 
 .btn-1:hover {
@@ -282,4 +288,97 @@
   color: #000;
   border-radius: 5px;
 }
-/*footer ****** */
+/* Testimonials */
+/* .testimonials {
+  display: flex;
+  align-items: center;
+  background-color: #e8f4ff;
+  padding: 10px 100px;
+}
+.testimonials h1 {
+  font-size: 25px;
+  font-weight: 900;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+} */
+
+#testimonials {
+  width: 100%;
+  padding: 100px 90px;
+  position: relative;
+  background-color: #f7fbff;
+}
+.testimonial-row {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.title-text {
+  text-align: center;
+  margin-bottom: 55px;
+  font-size: 25px;
+  font-family: roboto;
+  font-weight: 900;
+  filter: opacity(0.9);
+}
+.title-text p {
+  margin: auto;
+  font-size: 20px;
+  color: #e15e00;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+}
+.title-text p::after {
+  content: "";
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#e15e00, #fff);
+  position: absolute;
+  top: -20px;
+  left: 0;
+  z-index: -1;
+  transform: rotate(10deg);
+  border-top-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+}
+
+.user-info {
+  gap: 7px;
+  display: flex;
+  flex-direction: column;
+}
+.testimonial-column {
+  flex-basis: 30%;
+  text-align: justify;
+  padding: 40px 33px;
+  margin-bottom: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px 10px #00968814;
+  transition: transform 0.5s;
+  cursor: pointer;
+  background-color: #fff;
+}
+.testimonial-column:hover {
+  transform: translatey(10px);
+}
+.testimonial-column p {
+  font-size: 16px;
+  padding: 18px 0;
+  letter-spacing: 0.5px;
+}
+.user img {
+  width: 50px;
+  margin-right: 20px;
+  border-radius: 6px;
+}
+.user i {
+  color: #27c0ff;
+}
+.user span {
+  color: #ff8d56;
+}
