--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -2,6 +2,76 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "roboto";
+}
+.contact {
+  width: 100%;
+  padding: 30px 40px;
+  background-color: #f6f6f6;
+}
+.contact .contact-container {
+  width: 100%;
+  padding: 10px 230px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact h2 {
+  text-transform: uppercase;
+  font-size: 40px;
+  color: #010f1c;
+  font-weight: 200;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+form input,
+textarea {
+  width: 450px;
+  padding: 15px 9px;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background: #f0f0f0;
+}
+.contact-box-1,
+.contact-box-2,
+.contact-box-3 {
+  display: flex;
+  align-items: center;
+  gap: 19px;
+  margin: 20px 0;
+}
+.contact-box-2-left,
+.contact-box-3-left,
+.contact-box-1-left {
+  font-size: 25px;
+  color: #ff8d56;
+}
+.contact-box p {
+  font-size: 14px;
+  filter: opacity(0.4);
+  font-weight: 300;
+}
+.contact-box h3 {
+  font-size: 20px;
+  font-weight: 300;
+  margin-bottom: 8px;
+}
+.new-btn:hover {
+  color: #fff;
+  cursor: pointer;
+  background-color: #ff8d56;
+}
+
+.new-btn {
+  padding: 14px 70px;
+  border-radius: 6px;
+  font-size: 15px;
+  color: #ff8d56;
+  border: 1px solid #ff8d56;
 }
