--- a/src/components/products.css
+++ b/src/components/products.css
@@ -1,5 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+.products {
+  width: 100%;
+  padding: 30px 40px;
+}
+.categories ul li:hover {
+  cursor: pointer;
+  color: #7b7b7b;
+}
+.categories ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: "Roboto";
+  font-weight: 300;
+  margin-top: 30px;
+}
+.products .container {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+  max-width: 100%;
+}
+.categories h3 {
+  font-family: "Roboto";
+  color: rgb(255, 128, 0);
+  font-weight: 500;
+  font-size: 28px;
+}
+
+.products h2 {
+  font-size: 50px;
+  font-family: roboto;
+}
+.products p {
+  font-family: "Roboto";
+  font-size: 20px;
+  font-weight: 300;
+  padding: 10px 0;
+}
+.products .container .filter {
+  width: 20%;
 }
